[gd_scene load_steps=6 format=3 uid="uid://cm5r1wi0y1u3d"]

[ext_resource type="Script" path="res://v2 char/stealth_char.gd" id="1_e1eod"]
[ext_resource type="PackedScene" uid="uid://7an6jat1iy21" path="res://v2 char/stealth_char_anim.tscn" id="2_6kwbc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lorbp"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_w4yjt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kef13"]
radius = 40.0

[node name="StealthChar" type="CharacterBody2D"]
collision_layer = 150
collision_mask = 17
script = ExtResource("1_e1eod")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
zoom = Vector2(2.5, 2.5)

[node name="StealthCharAnim" parent="." instance=ExtResource("2_6kwbc")]
unique_name_in_owner = true
position = Vector2(9.53674e-07, 0)
scale = Vector2(2.5, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lorbp")

[node name="AlertBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertBox"]
shape = SubResource("CircleShape2D_w4yjt")
debug_color = Color(0.588235, 0.462745, 0.772549, 0.321569)

[node name="VisualBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisualBox"]
shape = SubResource("CircleShape2D_kef13")
debug_color = Color(0.366914, 0.599817, 0.406265, 0.42)
